--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.14.0</version>
 				</plugin>
+				<plugin>
+					<groupId>net.revelc.code.formatter</groupId>
+					<artifactId>formatter-maven-plugin</artifactId>
+					<version>2.27.0</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
